# for-log.github.io

./: .gitignore  Cargo.toml  README.md  frontend-9101a7f277a24828.js  frontend-9101a7f277a24828_bg.wasm  index-d76d87f36775beb.css  index.html
.github/workflows/: build_binaries.yml  pages.yml  rust.yml
src/: main.rs  particle.rs
src/backend_answers/: mod.rs
src/components/: about.rs  accordion.rs  canvas.rs  game.rs  header.rs  home.rs  mod.rs  work.rs  works.rs
static/css/: index.css
