[package]
name = "frontend"
version = "0.1.0"
edition = "2021"


[dependencies]
leptos = { version = "0.4.2", features = ["csr"] }
# yew = { version = "0.20.0", features = ["csr"] }
web-sys = { version = "0.3.64", features = [
    "HtmlElement",
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
    "DomRect"
] }
# gloo-net = "0.3.0"
# wasm-bindgen-futures = "0.4.37"
wasm-bindgen = "0.2.87"
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0.99"
js-sys = "0.3.64"
# gloo-events = "0.1.2"
