[package]
name = "frontend"
version = "0.1.0"
edition = "2021"


[dependencies]
leptos = { version = "0.4.2", features = ["csr"] }
web-sys = { version = "0.3.64", features = [
    "HtmlElement",
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
    "DomRect"
] }
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"
rand = "0.8.4"
getrandom = { version = "0.2", features = ["js"] }